cicd_test_k8s/kube/deploy_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
  labels:
    app: python-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
       - name: python-app
         image: $container_registry/app:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
      imagePullSecrets:
       - name: gitlab-auth
