cicd_test_k8s/kube/service_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-python-app
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: http
