cicd_test_k8s/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: "/py"
        pathType: Prefix
        backend:
          service:
            name: service-python-app
            port:
              number: 80
